--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,6 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<logback.version>1.2.3</logback.version>
 	</properties>
 
 	<dependencies>
@@ -34,7 +33,12 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>${logback.version}</version>
+<!--			<version>${logback.version}</version>-->
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+<!--			<version>${jackson-bom.version}</version>-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
