--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<springdoc.version>1.1.49</springdoc.version>
+		<guava.version>28.1-jre</guava.version>
 	</properties>
 
 	<dependencies>
@@ -37,6 +39,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
