--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,11 @@
 		<java.version>1.8</java.version>
 		<springdoc.version>1.1.49</springdoc.version>
 		<guava.version>28.1-jre</guava.version>
-		<frontend-src-dir>${project.basedir}/src/main/javascript/app</frontend-src-dir>
+		<jsoup.version>1.12.1</jsoup.version>
+		<mapstruct.version>1.3.1.Final</mapstruct.version>
 		<node.version>v12.3.1</node.version>
 		<yarn.version>v1.16.0</yarn.version>
+		<frontend-src-dir>${project.basedir}/src/main/javascript/app</frontend-src-dir>
 		<frontend-maven-plugin.version>1.7.6</frontend-maven-plugin.version>
 	</properties>
 
@@ -30,7 +32,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -53,6 +54,16 @@
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>${springdoc.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>${jsoup.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
