--- a/src/main/javascript/app/package.json
+++ b/src/main/javascript/app/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/dom": "6.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@testing-library/user-event": "^8.0.2",
     "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
+    "@types/node": "^13.1.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "office-ui-fabric-react": "^7.76.2",
@@ -15,6 +16,9 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
+  },
+  "resolutions": {
+    "react-scripts/**/serialize-javascript": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
