--- a/src/main/javascript/app/package.json
+++ b/src/main/javascript/app/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^13.1.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@uifabric/fluent-theme": "^7.1.4",
+    "@uifabric/react-cards": "^0.109.2",
     "office-ui-fabric-react": "^7.76.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
