--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Framework properties
 springdoc.swagger-ui.path=/s/api-docs
 spring.profiles.active=dev
-
 # Custom application properties
 application.expected.active.profile=dev
+application.database.name=gearValleyApp
+application.database.uri=mongodb://localhost
