--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,5 @@ springdoc.swagger-ui.path=/s/api-docs
 spring.profiles.active=dev
 # Custom application properties
 application.expected.active.profile=dev
-application.database.name=gearValleyApp
+application.database.name=heroku_hc6cjc2v
 application.database.uri=mongodb://localhost
