--- a/src/main/javascript/app/package.json
+++ b/src/main/javascript/app/package.json
@@ -11,11 +11,13 @@
     "@types/node": "^13.1.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "@uifabric/fluent-theme": "^7.1.4",
     "@uifabric/react-cards": "^0.109.2",
     "office-ui-fabric-react": "^7.76.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
   },
