--- a/lombok.config
+++ b/lombok.config
@@ -1,2 +1,3 @@
 lombok.anyConstructor.addConstructorProperties = true
+lombok.nonNull.exceptionType = IllegalArgumentException
 config.stopBubbling = true
