Check for existing price watch before returning search result

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # Framework properties
 springdoc.swagger-ui.path=/s/api-docs
 spring.profiles.active=dev
+spring.jackson.default-property-inclusion=NON_NULL
+spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
+
 # Custom application properties
 application.expected.active.profile=dev
 application.database.name=heroku_hc6cjc2v
