--- a/src/main/javascript/app/package.json
+++ b/src/main/javascript/app/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.1.3",
     "@uifabric/fluent-theme": "^7.1.4",
     "@uifabric/react-cards": "^0.109.2",
+    "date-fns": "^2.8.1",
     "office-ui-fabric-react": "^7.76.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
