Issue #42 tomcat to undertow migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ springdoc.swagger-ui.path=/s/api-docs
 spring.profiles.active=dev
 spring.jackson.default-property-inclusion=NON_NULL
 spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
+server.compression.min-response-size=1024
+server.http2.enabled=true
 
 # Custom application properties
 application.expected.active.profile=dev
