--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ server.compression.enabled=true
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
 server.compression.min-response-size=1024
 server.http2.enabled=true
+spring.resources.cache.cachecontrol.max-age=31536000
+spring.resources.cache.cachecontrol.must-revalidate=true
 
 # Custom application properties
 application.expected.active.profile=dev
