--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<springdoc.version>1.1.49</springdoc.version>
 		<guava.version>28.1-jre</guava.version>
 		<jsoup.version>1.12.1</jsoup.version>
+		<twitter4j.version>[4.0,]</twitter4j.version>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
 		<node.version>v13.1.0</node.version>
 		<yarn.version>v1.21.1</yarn.version>
@@ -73,6 +74,11 @@
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>${jsoup.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>${twitter4j.version}</version>
 		</dependency>
 
 		<!-- Documentation dependencies -->
