--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ server.http2.enabled=true
 # Custom application properties
 # ------------------------------------------------ #
 # Database config
-application.database.name=heroku_hc6cjc2v
+application.database.name=gear-valley-sandbox
 application.database.uri=mongodb://localhost
 
 # Profiles config
